--- a/assets/index.html
+++ b/assets/index.html
@@ -8,5 +8,5 @@
 </head>
 <body></body>
 <script src="js/jquery.min.js"></script>
-<script src="js/base.js"></script>
+<script src="js/signin.js"></script>
 </html>
