--- a/assets/main.html
+++ b/assets/main.html
@@ -17,10 +17,10 @@
 			</li>
 		</ul>
 		<div class="tab-content">
-			<div class="container-fluid" id="toolbar">
-				<div class="row">
-					<div class="col-xs-8"></div>
-					<div class="col-xs-4"></div>
+			<div class="container-fluid">
+				<div class="row" id="toolbar">
+					<button type="button" class="btn btn-success btn-sm">出售</button>
+					<button type="button" class="btn btn-info btn-sm pull-right">刷新</button>
 				</div>
 			</div>
 			<div role="tabpanel" ng-controller="onsellController" class="tab-pane fade" id="auctions"></div>
