--- a/assets/main.html
+++ b/assets/main.html
@@ -24,7 +24,7 @@
 			<div role="tabpanel" ng-controller="expiredController" class="tab-pane fade" id="expired">
 				<div class="container-fluid">
 					<div class="row" id="toolbar">
-						<button type="button" id="sell2" class="btn btn-success btn-sm">重新拍卖</button>
+						<button type="button" id="sellExpired" class="btn btn-success btn-sm">重新拍卖</button>
 						<button type="button" id="refreshExpired" class="btn btn-info btn-sm">刷新</button>
 						<span class="pull-right">{{title}}</span>
 					</div> 
